Fix SonarQube "Stream::toList" & "Conditional logger"
Signed-off-by: Thibault Meyer <meyer.thibault@gmail.com>